--- a/charts/kubernetes-sidecar-injector/templates/mutatingwebhook.yaml
+++ b/charts/kubernetes-sidecar-injector/templates/mutatingwebhook.yaml
@@ -102,12 +102,12 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - --port={{ .Values.container.port }}
-            - --certFile=/opt/kubernetes-sidecar-injector/certs/cert.pem
-            - --keyFile=/opt/kubernetes-sidecar-injector/certs/key.pem
-            - --injectPrefix={{ trimSuffix "/" .Values.selectors.injectPrefix }}
-            - --injectName={{ .Values.selectors.injectName }}
-            - --sidecarDataKey={{ .Values.sidecars.dataKey }}
+            - -port={{ .Values.container.port }}
+            - -tlsCertFile=/opt/kubernetes-sidecar-injector/certs/cert.pem
+            - -tlsKeyFile=/opt/kubernetes-sidecar-injector/certs/key.pem
+            - -injectPrefix={{ trimSuffix "/" .Values.selectors.injectPrefix }}
+            - -injectName={{ .Values.selectors.injectName }}
+            - -sidecarDataKey={{ .Values.sidecars.dataKey }}
           volumeMounts:
             - name: {{ .Release.Name }}-certs
               mountPath: /opt/kubernetes-sidecar-injector/certs
@@ -116,27 +116,7 @@ spec:
             - name: https
               containerPort: {{ .Values.container.port }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: https
-              scheme: HTTPS
-            initialDelaySeconds: 5
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 5
-            timeoutSeconds: 4
-          readinessProbe:
-            httpGet:
-              path: /healthz
-              port: https
-              scheme: HTTPS
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 5
-            timeoutSeconds: 4
-      {{- with .Values.podSecurityContext }}
+        {{- with .Values.podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
