--- a/charts/kubernetes-sidecar-injector/values.yaml
+++ b/charts/kubernetes-sidecar-injector/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: expediagroup/kubernetes-sidecar-injector
+  repository: menta2l/k8-injector
   tag: latest
   pullPolicy: IfNotPresent
   pullSecrets: []
@@ -20,7 +20,7 @@ sidecars:
   dataKey: sidecars.yaml
 
 selectors:
-  injectPrefix: sidecar-injector.expedia.com
+  injectPrefix: injector.server-lab.info
   injectName: inject
   disableInjectLabel: disable-inject
   objectSelector: {}
